--- a/Natours/starter/sass/layout/_navigation.scss
+++ b/Natours/starter/sass/layout/_navigation.scss
@@ -10,7 +10,7 @@
   &__checkbox:checked ~ &__nav {
     width: 100%;
     opacity: 1;
-    // visibility: visible;
+    visibility: visible;
   }
 
   &__button {
@@ -61,6 +61,7 @@
     left: 0;
     z-index: 1500;
     transition: all 0.8s cubic-bezier(0.86, 0, 0.07, 1);
+    visibility: hidden;
   }
 
   &__list {
